REFACTOR: 멤버가 등록한 태그 얻기 getRegisterdTags 모듈화